<?xml version="1.0"?>
<package format="2">
  <name>ar_track_alvar_msgs</name>
  <version>0.7.1</version>
  <description>
  This package is a ROS wrapper for Alvar, an open source AR tag tracking library.
  </description>
  <maintainer email="sniekum@cs.umass.edu">Scott Niekum</maintainer>
  <maintainer email="gm130s@gmail.com">Isaac I.Y. Saito</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/ar_track_alvar</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
